[gd_scene load_steps=4 format=3 uid="uid://c5ce8itc6k4aj"]

[ext_resource type="Script" path="res://Scenes/UI/card_template.gd" id="1_7oroi"]
[ext_resource type="Texture2D" uid="uid://bai4icwfd1o2h" path="res://icon.svg" id="1_bs2ob"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88iqn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="CardTemplate" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(128, 160)
layout_mode = 3
anchors_preset = 0
focus_mode = 2
mouse_filter = 1
script = ExtResource("1_7oroi")

[node name="Graphics" type="Node2D" parent="."]

[node name="Control" type="Control" parent="Graphics"]
custom_minimum_size = Vector2(128, 160)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="Graphics/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_88iqn")

[node name="VBoxContainer" type="VBoxContainer" parent="Graphics/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="Graphics/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "NAME"

[node name="ArtworkTextureRect" type="TextureRect" parent="Graphics/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_bs2ob")
expand_mode = 1

[node name="DescriptionLabel" type="Label" parent="Graphics/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Description"
autowrap_mode = 2
